helm-chart-airflow/ingress-controller.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: airflow-web
          servicePort: 8080
        path: /admin
      - backend:
          serviceName: airflow-flower
          servicePort: 5555
        path: /flower(/|$)(.*)
